--- a/FlyFiguresTraineeProject/FlyFiguresTraineeProject.csproj
+++ b/FlyFiguresTraineeProject/FlyFiguresTraineeProject.csproj
@@ -28,6 +28,18 @@
         <XamlRuntime>Wpf</XamlRuntime>
         <SubType>Designer</SubType>
       </Page>
+      <Page Update="Styles\ButtonStyles.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </Page>
+      <Page Update="Styles\ItemControlStyles.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </Page>
+      <Page Update="Styles\ScrollStyles.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </Page>
+      <Page Update="Styles\ComboboxStyles.xaml">
+        <Generator>MSBuild:Compile</Generator>
+      </Page>
     </ItemGroup>
 
     <ItemGroup>
@@ -42,6 +54,14 @@
       <EmbeddedResource Update="Resources\Languages\Language.resx">
         <Generator>ResXFileCodeGenerator</Generator>
         <LastGenOutput>Language.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Languages\Resources\Language.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Language.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
+      <EmbeddedResource Update="Languages\Resources\Language.en.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Language.en.Designer.cs</LastGenOutput>
       </EmbeddedResource>
     </ItemGroup>
 
