Added figure systems and done task "figures touched event"

--- a/FlyFiguresTraineeProject/FlyFiguresTraineeProject.csproj
+++ b/FlyFiguresTraineeProject/FlyFiguresTraineeProject.csproj
@@ -70,4 +70,8 @@
       </Compile>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\FlyFiguresTraineeProject.Utils\FlyFiguresTraineeProject.Utils.csproj" />
+    </ItemGroup>
+
 </Project>
